syntax = "proto3";

package fuzz;

message Gif {
  enum Version {
    UNKNOWN = 0;
    GIF87 = 1;  // GIF87_STAMP
    GIF89 = 2;  // GIF89_STAMP
  }
  Version version = 1;

  fixed32 width = 2;   // 2 bytes
  fixed32 height = 3;  // 2 bytes

  message ColourMap {
    fixed32 colour_resolution = 1;  // 3 bits
    fixed32 bits_per_pixel = 2;     // 3 bits
    bool is_sorted = 3;
  }
  optional ColourMap colour_map = 4;

  fixed32 background_colour = 5;  // 1 byte
  fixed32 aspect_ratio = 6;       // 1 byte

  message Block {
    message Extension {
      enum Function {
        UNKNOWN = 0;
        PLAIN_TEXT = 1;
        COMMENT = 2;
        GRAPHICS = 3;
        APPLICATION = 4;
      }
      Function code = 1;
      bytes content = 2;
    }
    message Descriptor {
      fixed32 left = 1;
      fixed32 top = 2;
      fixed32 width = 3;
      fixed32 height = 4;
      bool interlaced = 5;

      message ColourMap {
        fixed32 bits_per_pixel = 1;
      }
      optional ColourMap colour_map = 6;

      fixed32 code_size = 7;
    }
    message Terminator {}
    oneof block {
      Extension ext = 1;
      Descriptor desc = 2;
      Terminator terminator = 3;
    }
  }
  repeated Block blocks = 7;
}
